{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 120,
  "lineage": "773b9505-0b48-6079-1dff-61c29d95503a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83b408b161803c9",
            "arn": "arn:aws:ec2:us-east-1:429367298871:elastic-ip/eipalloc-0a83b408b161803c9",
            "domain": "vpc",
            "id": "eipalloc-0a83b408b161803c9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-95-92-68.compute-1.amazonaws.com",
            "public_ip": "98.95.92.68",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0157af9aea2eef346",
            "arn": "arn:aws:ec2:us-east-1:429367298871:instance/i-045ac6688fcb09778",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045ac6688fcb09778",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0266441e63be6de3e"
              }
            ],
            "primary_network_interface_id": "eni-0266441e63be6de3e",
            "private_dns": "ip-172-20-1-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.219",
            "public_dns": "ec2-18-234-195-32.compute-1.amazonaws.com",
            "public_ip": "18.234.195.32",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c451c84c6f91a9b1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee8564273a18fc50",
            "tags": {
              "Name": "bastion-server"
            },
            "tags_all": {
              "Name": "bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034ffd79762bf0c27"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "i-045ac6688fcb09778",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion-host",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:internet-gateway/igw-06bd1242b5bd33c4b",
            "id": "igw-06bd1242b5bd33c4b",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "tags": {
              "Name": "3-tier-ig"
            },
            "tags_all": {
              "Name": "3-tier-ig"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/backend-alb/1ab897f1817ffaa7",
            "arn_suffix": "app/backend-alb/1ab897f1817ffaa7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-50068681.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/backend-alb/1ab897f1817ffaa7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-09684a6e56691dfad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036d1357beeffea96"
              },
              {
                "subnet_id": "subnet-0ee8564273a18fc50"
              }
            ],
            "subnets": [
              "subnet-036d1357beeffea96",
              "subnet-0ee8564273a18fc50"
            ],
            "tags": {
              "Name": "ALB-backend"
            },
            "tags_all": {
              "Name": "ALB-backend"
            },
            "vpc_id": "vpc-018001b7a3effe5b0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/backend-alb/1ab897f1817ffaa7"
          },
          "dependencies": [
            "aws_lb_target_group.back_end",
            "aws_security_group.alb-backend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/frontend-alb/0dcbda3bdc66bdab",
            "arn_suffix": "app/frontend-alb/0dcbda3bdc66bdab",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-614133686.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/frontend-alb/0dcbda3bdc66bdab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-01fc1c572711db815"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036d1357beeffea96"
              },
              {
                "subnet_id": "subnet-0ee8564273a18fc50"
              }
            ],
            "subnets": [
              "subnet-036d1357beeffea96",
              "subnet-0ee8564273a18fc50"
            ],
            "tags": {
              "Name": "ALB-Frontend"
            },
            "tags_all": {
              "Name": "ALB-Frontend"
            },
            "vpc_id": "vpc-018001b7a3effe5b0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/frontend-alb/0dcbda3bdc66bdab"
          },
          "dependencies": [
            "aws_lb_target_group.front_end",
            "aws_security_group.alb-frontend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:listener/app/backend-alb/1ab897f1817ffaa7/a01c72a39a003453",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/backend-tg/6cdab6716cb5aea6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:429367298871:listener/app/backend-alb/1ab897f1817ffaa7/a01c72a39a003453",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/backend-alb/1ab897f1817ffaa7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:listener/app/backend-alb/1ab897f1817ffaa7/a01c72a39a003453"
          },
          "dependencies": [
            "aws_lb.back_end",
            "aws_lb_target_group.back_end",
            "aws_security_group.alb-backend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:listener/app/frontend-alb/0dcbda3bdc66bdab/5539f6d43914bdc7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/frontend-tg/ac2db329b1deacec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:429367298871:listener/app/frontend-alb/0dcbda3bdc66bdab/5539f6d43914bdc7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:loadbalancer/app/frontend-alb/0dcbda3bdc66bdab",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:listener/app/frontend-alb/0dcbda3bdc66bdab/5539f6d43914bdc7"
          },
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb-frontend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/backend-tg/6cdab6716cb5aea6",
            "arn_suffix": "targetgroup/backend-tg/6cdab6716cb5aea6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/backend-tg/6cdab6716cb5aea6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/backend-tg/6cdab6716cb5aea6"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/frontend-tg/ac2db329b1deacec",
            "arn_suffix": "targetgroup/frontend-tg/ac2db329b1deacec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/frontend-tg/ac2db329b1deacec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429367298871:targetgroup/frontend-tg/ac2db329b1deacec"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cust-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83b408b161803c9",
            "association_id": "eipassoc-0ca1f23eb8e463e2b",
            "connectivity_type": "public",
            "id": "nat-085447023751d6cd1",
            "network_interface_id": "eni-0a0a7bb05141494c3",
            "private_ip": "172.20.1.137",
            "public_ip": "98.95.92.68",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ee8564273a18fc50",
            "tags": {
              "Name": "3-tier-nat"
            },
            "tags_all": {
              "Name": "3-tier-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-prvt-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:route-table/rtb-0e4d2c66560aa5076",
            "id": "rtb-0e4d2c66560aa5076",
            "owner_id": "429367298871",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-085447023751d6cd1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-tier-privt-rt"
            },
            "tags_all": {
              "Name": "3-tier-privt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "rtb-0e4d2c66560aa5076",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:route-table/rtb-0f0c40e01209b516f",
            "id": "rtb-0f0c40e01209b516f",
            "owner_id": "429367298871",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bd1242b5bd33c4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-tier-pub-rt"
            },
            "tags_all": {
              "Name": "3-tier-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "rtb-0f0c40e01209b516f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa681bcc24e627a2",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4d2c66560aa5076",
            "subnet_id": "subnet-099b1cbb086a84353"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt3",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-4b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0560ad8c3f907418d",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4d2c66560aa5076",
            "subnet_id": "subnet-0c0f32768781f1101"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt4",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-5a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017e436dd59298727",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4d2c66560aa5076",
            "subnet_id": "subnet-030563aa6f83e449e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt5",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-6b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e47aa8b2f8c420c4",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4d2c66560aa5076",
            "subnet_id": "subnet-0cd5d09e8a1789eaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt6",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-7a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06914cfb8d0609735",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4d2c66560aa5076",
            "subnet_id": "subnet-046a313e294f787cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt7",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-8b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd2f57c414ec13c3",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4d2c66560aa5076",
            "subnet_id": "subnet-025132e48e315194f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt8",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7ca26b1f61c4dcd",
            "region": "us-east-1",
            "route_table_id": "rtb-0f0c40e01209b516f",
            "subnet_id": "subnet-0ee8564273a18fc50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_route_table.three-tier-pub-rt",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070ecfa7f94dcf9c2",
            "region": "us-east-1",
            "route_table_id": "rtb-0f0c40e01209b516f",
            "subnet_id": "subnet-036d1357beeffea96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_route_table.three-tier-pub-rt",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:security-group/sg-09684a6e56691dfad",
            "description": "Allow inbound traffic ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09684a6e56691dfad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-backend-sg",
            "name_prefix": "",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-backend-sg"
            },
            "tags_all": {
              "Name": "alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "sg-09684a6e56691dfad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-frontend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:security-group/sg-01fc1c572711db815",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fc1c572711db815",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "sg-01fc1c572711db815",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:security-group/sg-03c488e8a4d5288fc",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c488e8a4d5288fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-server-sg",
            "name_prefix": "",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-server-sg"
            },
            "tags_all": {
              "Name": "backend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "sg-03c488e8a4d5288fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb-backend-sg",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:security-group/sg-034ffd79762bf0c27",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034ffd79762bf0c27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from web layer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "appserver-SG",
            "name_prefix": "",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-server-sg"
            },
            "tags_all": {
              "Name": "bastion-host-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "sg-034ffd79762bf0c27",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "book-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:security-group/sg-05f9944596c730af1",
            "description": "Allow inbound ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f9944596c730af1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql/aroura",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "book-rds-sg",
            "name_prefix": "",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "book-rds-sg"
            },
            "tags_all": {
              "Name": "book-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "sg-05f9944596c730af1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:security-group/sg-00f76f89f539439ed",
            "description": "Allow inbound traffic ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f76f89f539439ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-server-sg",
            "name_prefix": "",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-server-sg"
            },
            "tags_all": {
              "Name": "frontend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "sg-00f76f89f539439ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb-frontend-sg",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-099b1cbb086a84353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b1cbb086a84353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-3a"
            },
            "tags_all": {
              "Name": "prvt-3a"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-099b1cbb086a84353",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-0c0f32768781f1101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0f32768781f1101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-4b"
            },
            "tags_all": {
              "Name": "prvt-4b"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-0c0f32768781f1101",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-030563aa6f83e449e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030563aa6f83e449e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-5a"
            },
            "tags_all": {
              "Name": "prvt-5a"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-030563aa6f83e449e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-0cd5d09e8a1789eaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd5d09e8a1789eaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-6b"
            },
            "tags_all": {
              "Name": "prvt-6b"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-0cd5d09e8a1789eaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-046a313e294f787cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046a313e294f787cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-7a"
            },
            "tags_all": {
              "Name": "prvt-7a"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-046a313e294f787cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-025132e48e315194f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025132e48e315194f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-8b"
            },
            "tags_all": {
              "Name": "prvt-8b"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-025132e48e315194f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-0ee8564273a18fc50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee8564273a18fc50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pub-1a"
            },
            "tags_all": {
              "Name": "pub-1a"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-0ee8564273a18fc50",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:subnet/subnet-036d1357beeffea96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036d1357beeffea96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "429367298871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pub-2b"
            },
            "tags_all": {
              "Name": "pub-2b"
            },
            "vpc_id": "vpc-018001b7a3effe5b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "subnet-036d1357beeffea96",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429367298871:vpc/vpc-018001b7a3effe5b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0340d77e9886452a4",
            "default_route_table_id": "rtb-0c8f0856b3144f83b",
            "default_security_group_id": "sg-0afac240a358ebc52",
            "dhcp_options_id": "dopt-080ce79f447216408",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018001b7a3effe5b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8f0856b3144f83b",
            "owner_id": "429367298871",
            "region": "us-east-1",
            "tags": {
              "Name": "3-tietr-vpc"
            },
            "tags_all": {
              "Name": "3-tietr-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429367298871",
            "id": "vpc-018001b7a3effe5b0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}